// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handle failing to get a balance from Starling returns a valid Alexa response 1`] = `
Object {
  "response": Object {
    "outputSpeech": Object {
      "text": "Something went wrong. Check your Starling access token, re-deploy, and then try again",
      "type": "PlainText",
    },
    "shouldEndSession": true,
  },
  "version": "1.0",
}
`;

exports[`handle getting a balance from Starling successfully returns a valid Alexa response 1`] = `
Object {
  "response": Object {
    "outputSpeech": Object {
      "text": "Your balance is £1000.",
      "type": "PlainText",
    },
    "shouldEndSession": true,
  },
  "version": "1.0",
}
`;
